Closed Bug 16413 Opened 25 years ago Closed 25 years ago

[DOGFOOD]Reply All doesn't remove "me" from recipient list

Categories

(MailNews Core :: Composition, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: phil, Assigned: bugzilla)

References

Details

(Whiteboard: [PDT-])

1. Read a message which was addressed to you and other people 2. Click Reply All 3. I expect the app to prune my email address from the list of recipients on the reply, but it doesn't. Note that in addition to removing the email address of the identity which is authoring the reply, 4.5+ also contains a preference for alternate email addresses which are "me". That pref is called "mail.identity.useremail.aliases" We need to figure out how that fits into the mozilla multiple account world. For example, should the email addresses of *all* identities be pruned, or just the email address of the replying identity? If the latter, what happens when you switch identities after the compose window comes up? cc alecf to help with this issue.
Status: NEW → ASSIGNED
Target Milestone: M12
Summary: Reply All doesn't remove "me" from recipient list → [DOGFOOD]Reply All doesn't remove "me" from recipient list
This *might* be dogfood. It sure drives me up the wall.
Whiteboard: [PDT-]
QA Contact: lchiang → pmock
changing QA assigned to myself
*** Bug 18235 has been marked as a duplicate of this bug. ***
Blocks: 18951
Phil, does 4.5 has a UI to acces to the alternate email address?
Nope
Whiteboard: [PDT-] → [PDT-] Waiting on the tree to checking fix
Ok, now I remove the current identity email address from the CC list and I remove also any duplicate. Message Compose use the nsIMsgHeadersParser function RemoveDuplicateAddresses which takes care of removing aliases also. Unfortunately, this part of the code in the parser is commented out.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: [PDT-] Waiting on the tree to checking fix → [PDT-]
Fixed and checked in. WIll be in today's build
some more precision about my fix. Everything is done except for the part of code in the parser that take care of the pref "mail.identity.useremail.aliases". If we need this feature in 5.0, please file a new bug for it.
Filed bug 19231 on the aliases preference
Status: RESOLVED → VERIFIED
No longer blocks: 18951
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.