Fix for bug 16413. Use parser call RemoveDuplicateAddresses when building recipients list. R=mscott